# CasADi

./: README.md
Cpp_demo/: .clang-format  .gitignore  CMakeLists.txt  main.cpp
Cpp_demo/src/: main.cpp
Python_demo/: CasADi_demo.py  nlp_funcs.c  nlp_funcs.h
